カメラワーク途中まで。まだ動かない

--- a/VoxelEngine.vcxproj
+++ b/VoxelEngine.vcxproj
@@ -20,11 +20,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="settings.hpp" />
+    <ClCompile Include="Mesh.hpp" />
+    <ClCompile Include="common.hpp" />
+    <ClCompile Include="ObjMesh.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shader.frag" />
     <None Include="shader.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Camera.hpp" />
+    <ClInclude Include="Player.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
